// Copyright 2019 SignalCD Team
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package signalcd;

option go_package = "signalcdproto";

service AgentService {
    rpc CurrentDeployment (CurrentDeploymentRequest) returns (CurrentDeploymentResponse);
    rpc SetDeploymentStatus (SetDeploymentStatusRequest) returns (SetDeploymentStatusResponse);
    rpc StepStatus (StepStatusRequest) returns (StepStatusResponse);
}

message Deployment {
    int64 number = 1;
    int64 created = 2;
    int64 started = 3;
    int64 finished = 4;
    DeploymentStatus status = 5;
    Pipeline pipeline = 6;
}

message DeploymentStatus {
    enum Phase {
        UNKNOWN = 0;
        SUCCESS = 1;
        FAILURE = 2;
        PROGRESS = 3;
        PENDING = 4;
        KILLED = 5;
    }
    Phase phase = 1;
}

message CurrentDeploymentRequest {
}

message CurrentDeploymentResponse {
    Deployment currentDeployment = 1;
}

message SetDeploymentStatusRequest {
    int64 number = 1;
    DeploymentStatus status = 2;
}

message SetDeploymentStatusResponse {
}

message Pipeline {
    string id = 1;
    string name = 2;
    repeated Step steps = 3;
    repeated Check checks = 4;
}

message Step {
    string name = 1;
    string image = 2;
    repeated string ImagePullSecrets = 3;
    repeated string commands = 4;
}

message Check {
    string name = 1;
    string image = 2;
    repeated string ImagePullSecrets = 3;
    int64 duration = 4;
}

message StepStatusRequest {
    enum Phase {
        UNKNOWN = 0;
        SUCCESS = 1;
        FAILURE = 2;
        PROGRESS = 3;
        PENDING = 4;
        KILLED = 5;
    }

    int64 deployment = 1;
    int64 step = 2;
    Phase phase = 3;
    bytes logs = 4;
}

message StepStatusResponse {
}
